--- a/parfo_openapi/Cargo.toml
+++ b/parfo_openapi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "parfo_openapi"
-version = "0.1.0"
+version = "0.1.1-alpha.1"
 authors = ["Xuanwo <github@xuanwo.io>"]
 edition = "2018"
 description = "parfo support for openapi"
