--- a/parfo_openapi/Cargo.toml
+++ b/parfo_openapi/Cargo.toml
@@ -9,7 +9,10 @@ repository = "https://github.com/Xuanwo/parfo/"
 
 [dependencies]
 serde = { version = "1.0.115", features = ["derive", "std"] }
+serde-value = "0.7.0"
+anyhow = "1.0.32"
 
 [dev-dependencies]
 serde_json = "1.0.57"
 serde_yaml = "0.8.13"
+anyhow = "1.0.32"
